--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,5 +5,4 @@ stages:
 test:
   stage: test
   script:
-  - apt-get install -y python-dev python-pip
-  - python app.py test
+  - print("Hello World")
