--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,19 +10,20 @@ before_script:
 
 master-build:
   only:
-   - master@gitlab.excite.co.id/hendro/python-102.git
+    - master
   stage: build
   script:
     - print("Hello master-build")
 
 branch-build:
   only:
-    - branches@gitlab.excite.co.id/hendro/python-102.git
+    - branches
   stage: build
   script: 
   - print("Hello branch-build")
 
 master-deploy:
+  only:
+    - master
   script:
   - print("Hello master-deploy")
-  
