--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,33 +1,34 @@
+image: python:latest
+
 stages:
+  - build
   - test
   - deploy
 
-test:
-  stage: test
-  script:
-  # this configures Django application to use attached postgres database that is run on `postgres` host
-  - export DATABASE_URL=postgres://postgres:@postgres:5432/python-test-app
-  - apt-get update -qy
-  - apt-get install -y python-dev python-pip
-  - pip install -r requirements.txt
-  - python manage.py test
+before_script:
+  - python -V               # Print out python version for debugging
 
-staging:
+branch-build:
+  
+  only:
+    - branches
+  stage: build
+  script: 
+  - echo Hello branch-build
+
+master-build:
+  only:
+    - master
+  stage: build
+  script:
+    - echo Hello master-build
+
+
+
+master-deploy:
+  when: manual
+  only:
+    - master
   stage: deploy
   script:
-  - apt-get update -qy
-  - apt-get install -y ruby-dev
-  - gem install dpl
-  - dpl --provider=heroku --app=gitlab-ci-python-test-staging --api-key=$HEROKU_STAGING_API_KEY
-  only:
-  - master
-
-production:
-  stage: deploy
-  script:
-  - apt-get update -qy
-  - apt-get install -y ruby-dev
-  - gem install dpl
-  - dpl --provider=heroku --app=gitlab-ci-python-test-prod --api-key=$HEROKU_PRODUCTION_API_KEY
-  only:
-  - tags
+    - echo Hello master-deploy
