--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   app:
     image: python-103:latest
-    deployment:
-      constraints:
-        placement:
+    deploy:
+      placement:
+        constraints:
           - node.hostname = docker-test01
