--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,4 @@ services:
     deploy:
       placement:
         constraints:
-          - node.hostname = docker-test01
+          - node.hostname == docker-test01
