--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,8 @@
 image: docker:18
 
+variables:
+  REGISTRY: registry.excite.co.id:15000
+
 stages:
   - build
   - test
@@ -11,9 +14,9 @@ before_script:
 build-app:
   stage: build
   script:
-    - docker build -t python-103:latest .
-    - docker image tag python-103:latest registry.excite.co.id:15000/python-103:latest
-    - docker push registry.excite.co.id:15000/python-103:latest
+    - docker build -t $CI_PROJECT_NAME:$CI_COMMIT_REF_NAME .
+    - docker image tag $CI_PROJECT_NAME:$CI_COMMIT_REF_NAME $REGISTRY/$CI_PROJECT_NAME:$CI_COMMIT_REF_NAME
+    - docker push $REGISTRY/$CI_PROJECT_NAME:$CI_COMMIT_REF_NAME
 
 test-app:
   stage: test
